# GuiLiteAll

./: .gitignore  AD.docx  CMakeLists.txt  GraphicLayer.vsdx  NoodleUI.sln  README.md  document.md  merge-libs.sh
core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters
core/core_include/: wnd.h
core/src/: alarm_queue.cpp  bitmap.cpp  cmd_target.cpp  database.cpp  rect.cpp  surface.cpp  wave_buffer.cpp  wave_ctrl.cpp  wnd.cpp  word.cpp
core/src/adapter/: api_linux.cpp  api_win.cpp  audio_win.cpp
gui/: gui.vcxproj  gui.vcxproj.filters
gui/gui_include/: dialog.h  edit.h  spinbox.h
gui/src/: button.cpp  dialog.cpp  edit.cpp  gesture.cpp  keyboard.cpp  list_box.cpp  slide_group.cpp  spinbox.cpp
sample/: sample.vcxproj  sample.vcxproj.filters
sample/core_include/: api.h  wnd.h
sample/gui_include/: button.h  list_box.h
sample/source/ui_ctrl_ex/: time_bar.cpp
sample/source/ui_tree/: root.cpp  slide_config.cpp
sample_native/: CMakeLists.txt  main.cpp  sample_native.vcxproj
sample_uwp/: App.xaml  App.xaml.cs  Audio.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  RingControl.xaml  RingControl.xaml.cs  project.lock.json  sample_uwp.csproj  sample_uwp.sln  sample_uwp_TemporaryKey.pfx
sample_uwp/Properties/: AssemblyInfo.cs
sample_uwp_cpp/: Package.appxmanifest  _pkginfo.txt  sample_uwp_cpp.vcxproj
sample_uwp_dll/: sample.dll.cpp  sample.dll.h  sample.uwp.dll.sln  sample.uwp.dll.vcxproj
